--- a/app/build.gradle
+++ b/app/build.gradle
@@ -68,7 +68,22 @@ dependencies {
     // Core with Ktx
     implementation "androidx.core:core-ktx:$version_core"
 
+    // for Retrofit
     implementation "com.squareup.retrofit2:retrofit:$version_retrofit"
     implementation "com.squareup.retrofit2:converter-scalars:$version_retrofit"
+    // Retrofit with Moshi converter
+    implementation "com.squareup.retrofit2:converter-moshi:$version_retrofit"
+    // for GSON
+    implementation "com.squareup.retrofit2:converter-gson:$version_retrofit"
+
+    // for Moshi
+    implementation "com.squareup.moshi:moshi-kotlin:$version_moshi"
+
+    // for GSON
+    implementation "com.google.code.gson:gson:2.8.6"
+
+
+    // Glide library
+    implementation "com.github.bumptech.glide:glide:$version_glide"
 
 }
