--- a/NASAApodLoader/app/build.gradle
+++ b/NASAApodLoader/app/build.gradle
@@ -86,6 +86,14 @@ dependencies {
     // Glide library
     implementation "com.github.bumptech.glide:glide:$version_glide"
 
+    implementation "androidx.room:room-runtime:$room_version"
+    kapt "androidx.room:room-compiler:$room_version"
+
+    // optional - Kotlin Extensions and Coroutines support for Room
+    implementation "androidx.room:room-ktx:$room_version"
+
+    // optional - Test helpers
+    testImplementation "androidx.room:room-testing:$room_version"
 
 
 }
