--- a/NASAApodLoader/app/build.gradle
+++ b/NASAApodLoader/app/build.gradle
@@ -90,6 +90,7 @@ dependencies {
     implementation "com.github.bumptech.glide:glide:$version_glide"
 
     implementation "androidx.room:room-runtime:$room_version"
+    implementation 'androidx.legacy:legacy-support-v4:1.0.0'
     kapt "androidx.room:room-compiler:$room_version"
 
     // optional - Kotlin Extensions and Coroutines support for Room
