--- a/NASAApodLoader/app/build.gradle
+++ b/NASAApodLoader/app/build.gradle
@@ -40,7 +40,8 @@ android {
         }
     }
     buildFeatures {
-        dataBinding true
+        dataBinding = true
+        viewBinding = true
     }
     compileOptions {
         sourceCompatibility JavaVersion.VERSION_1_8
@@ -107,6 +108,4 @@ dependencies {
 
     kapt "com.android.databinding:compiler:3.0.1"
 }
-kapt {
-    generateStubs = true
-}
+
